syntax = "proto3";

option csharp_namespace = "ClinicServiceProtos";

package ClinicServiceProtos;

 //https://learn.microsoft.com/ru-ru/ASPNET/Core/grpc/json-transcoding?view=aspnetcore-7.0

 import "google/api/annotations.proto";

 //package proto;


//Сервис клиники
service ClinicClientService{
    //Добавление клиента
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
    //Оновление клиента
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
    //Удаление клиента
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
    //Получение клиента по идентификатору
	rpc GetClientById (GetClientByIdRequest) returns (GetClientByIdResponse);
    /*{
    option (google.api.http) = {
      post: "/api/clientById",
      body:"*",
      response_body: "client"
        };
    }*/

    //Получить список клиентов
	rpc GetClients (GetClientsRequest) returns (GetClientsResponse){
    option (google.api.http) = {
      get: "/api/clients"
        };
    }

}

//Параметры запроса на создание клиента
message CreateClientRequest{
    //Документ
	string document = 1;
    //Фамилия
	string surname = 2;
    //Имя
    string firstName = 3;
    //Отчество
    string patronymic = 4;
}

//Результат создания клиента
message CreateClientResponse{
	int32 clientId = 1;
}

message UpdateClientRequest {
        int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
}

message UpdateClientResponse {
}

message DeleteClientRequest {
        int32 clientId = 1;
}

message DeleteClientResponse {
}

message GetClientByIdRequest {
        int32 clientId = 1;
}

message GetClientByIdResponse {
    ClientResponse client = 1;
}

message GetClientsRequest{
}

message GetClientsResponse{
    repeated ClientResponse clients = 1;
}

message ClientResponse {
		int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
}